--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,3 +20,7 @@ body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-start-rgb));
 }
+
+.mask-heart {
+  mask-image: url("data:image/svg+xml,%3Csvg width='30px' height='30px' viewBox='0 0 24 24' fill='black' fill-rule='nonzero' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.39 20.87a.696.696 0 0 1-.78 0C9.764 19.637 2 14.15 2 8.973c0-6.68 7.85-7.75 10-3.25 2.15-4.5 10-3.43 10 3.25 0 5.178-7.764 10.664-9.61 11.895z'/%3E%3C/svg%3E");
+}
